# orderbook_tangle

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  foundry.toml  remappings.txt
contracts/src/: IOrderBookTaskManager.sol  ITangleTaskManager.sol  OrderBookServiceManager.sol  OrderBookTaskManager.sol  TangleServiceManager.sol  TangleTaskManager.sol  TokenA.sol  TokenB.sol
db/: 0b41cea7-0427-4c17-b5af-3148a32ffd0a  0e278f1c-07a9-4075-b005-6b22156c3e4e  157d4f63-0ec6-4797-9941-8ce6e8efd6d1  1a9581fb-103f-4c19-97a2-abc81035a72d  262f1540-9d13-4712-8a7e-5f1325b9c07c  2b9bdf09-0d14-4dcb-99d3-91e48a9157c2  2c60549b-6355-4d77-88f7-63d7ec7b7958  2f0f99d7-4d54-403f-8921-748cd2cfd27a  3a320093-5424-4439-9a9a-105fbd58c031  4028048a-f66d-4f41-8070-3f9e6eb082da  430cd5b4-0b15-448f-b2bf-e6c88804d72f  43533bb9-5059-413c-b41a-27a7d3634ba2  496a6995-818a-429c-87f6-44eb889cbfd9  503f06d2-981f-47b8-b0d5-bda60b55d004  5b79fbbc-b895-404c-8a54-496081aef714  640436f1-a4aa-4cbe-92af-5e2326ec66ec  692e6ef2-74c0-4568-b2f4-779ac3ffc7e9  6d10f9b3-4b01-4aaf-9dc5-0fd0e9830bd3  6dca51bb-b38d-4832-b0c9-e35455899f62  8296f9ae-fb5c-4eb0-8cd1-7919bd214556  92b4286c-7c9f-4af2-be7a-bcb41a3095d9  984422d6-dc08-4ec3-a29d-bc320228ed73  9b6c3ea3-fc59-4458-af76-ab7c04a14805  9ba36807-8548-4fe4-8068-a58c1394b6ea  a767dadf-c115-43d2-8101-d974690bc801  bdf48676-e5cc-48c0-bcff-baa114b1e43d  c00c3a84-c68d-49d9-9dcd-123f24a1a5a2  c382e027-e10f-41f8-a18f-1e03e45a6974  c8215bd0-d681-467c-90a2-557f73f82b7c  c95be64c-03d8-4570-8903-ab6515275184  cf8ec624-b313-4302-914c-04a461b22fc0  d1723858-e2d2-4717-9592-00e3d56ce288  dd7fb674-2819-4adb-be24-65cd6d018563  df4c34f2-9d5f-4e69-8eb8-10e02dc33d3c  e0d3dafa-6e5f-414a-906f-b25d4a5328e2  f24e6a34-efc0-40a3-bc02-64b4e6fefc2a  f9553d4a-f49b-4ca8-ad5f-9b652efbb935
src/: constants.rs  lib.rs  main.rs  tests.rs
src/contexts/: aggregator.rs  client.rs  mod.rs  order.rs  x_square.rs
src/jobs/: create_limit_order.rs  create_order.rs  initialize_task.rs  mod.rs
