[package]
name = "ob_avs"
version = "0.1.0"
edition = "2021"
description = "orderbook avs with ai agent"
authors = ["Pranav Doshi <pranav.rdoshi@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "ob.xyz"
repository = "https://github.com/0xPranavDoshi/ob_avs"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
alloy = { version = "0.9", default-features = false }
alloy-primitives = { version = "0.8", default-features = false }
alloy-json-abi = { version = "0.8", default-features = false }
alloy-json-rpc = { version = "0.9", default-features = false }
alloy-dyn-abi = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-rpc-client = { version = "0.9", default-features = false }
alloy-rpc-types = { version = "0.9", default-features = false }
alloy-rpc-types-eth = { version = "0.9", default-features = false }
alloy-provider = { version = "0.9", default-features = false, features = ["reqwest", "ws"] }
alloy-pubsub = { version = "0.9", default-features = false }
alloy-signer = { version = "0.9", default-features = false }
alloy-signer-local = { version = "0.11", default-features = false }
alloy-network = { version = "0.9", default-features = false }
alloy-node-bindings = { version = "0.9", default-features = false }
alloy-contract = { version = "0.9", default-features = false }
alloy-consensus = { version = "0.9", default-features = false }
alloy-transport = { version = "0.9", default-features = false }
alloy-transport-http = { version = "0.9", default-features = false }
ripemd = { version = "0.1.3", default-features = false }

async-trait = "0.1.86"
# Gadget
blueprint-sdk = { version = "0.1.0", git = "https://github.com/tangle-network/gadget.git", default-features = false, features = ["std", "eigenlayer", "evm", "macros", "build", "testing"] }
color-eyre = "0.6.3"
eigensdk = { version = "0.2.0", default-features = false }
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
reqwest = "0.12.12"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = "1.43.0"
tracing = "0.1.41"
futures = "0.3.31"
tempfile = "3.17.1"


[build-dependencies]
blueprint-sdk = { version = "0.1.0", git = "https://github.com/tangle-network/gadget.git", default-features = false, features = ["std", "build", "testing"] }

[features]
default = ["std"]
std = ["blueprint-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "ob_avs"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "TangleTaskManager" }

[[package.metadata.gadget.Native.sources]]
owner = "0xPranavDoshi"
repo = "ob_avs"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-ob_avs-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-ob_avs-gadget" },
]